syntax = "proto2";
package onedb;

option java_package = "tk.onedb.rpc";
option java_outer_classname = "OneDBCommon";

message Point {
  required double lon = 1;
  required double lat = 2;
}

message FieldProto {
  required string name = 1;
  required int32 type = 2;
}

message HeaderProto {
  repeated FieldProto field = 1;
}

message RowsProto {
  repeated bytes row = 1;
}

message DataSetProto {
  required HeaderProto header = 1;
  required RowsProto rows = 2;
}

message ExpressionProto {
  required int32 opType = 1;
  required int32 outType = 2;
  repeated ExpressionProto in = 3;
  optional int32 func = 4;
  oneof value {
    string str = 5;
    bool b = 6;
    int32 i32 = 7;
    int64 i64 = 8;
    float f32 = 9;
    double f64 = 10;
    Point p = 11;
    int32 ref = 12;
  }
}

message OneDBQueryProto {
  required string tableName = 1;
  required HeaderProto header = 2;
  repeated ExpressionProto selectExp = 3;
  repeated ExpressionProto whereExp = 4;
  repeated ExpressionProto aggExp = 5;
  repeated string order = 6;
  required int32 fetch = 7;
}